--- a/src/App.css
+++ b/src/App.css
@@ -1,64 +1,25 @@
-.App {
-	text-align: center;
-}
-
-.App-logo {
-	height: 40vmin;
-	pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-.App-link {
-	color: #61dafb;
-}
-
 .main::-webkit-scrollbar {
 	display: none;
 }
 
 .Dropzone {
-	height: 50px;
+	height: auto;
 	width: 98.5%;
 	background-color: #fff;
-	border: 2px dashed #B9CDDA;
+	border: 2px dashed #b9cdda;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
 	font-size: 16px;
-  margin: 0 auto;
-  cursor: pointer;
+	margin: 0 auto;
+	cursor: pointer;
 }
 
 .Highlight {
-	background-color: rgb(188, 185, 236);
+	background-color: #b9cdda;
 }
 
 .FileInput {
 	display: none;
-}
-
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
 }
