--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .Dropzone {
 	height: auto;
-	width: 98.5%;
+	width: calc(100% - 30px);
 	background-color: #e8ebe4;
 	border: 2px dashed #b9cdda;
 	border-radius: 5px;
@@ -13,8 +13,13 @@
 	justify-content: center;
 	flex-direction: column;
 	font-size: 16px;
-	margin: 0 auto;
+	margin: 5px;
+	padding: 10px;
 	cursor: pointer;
+	@media screen and (max-width: 850px) {
+		margin: 10px;
+		padding: 5px;
+  }
 }
 
 .Highlight {
